# OptimalSubgraph

./: README.md  data_preparation.py  evaluate.py  example_graph_generation.py  loss_func.py  loss_funcs.py  loss_parent_func.py  main.py  model.py  optimalsubgraph.toml  parameters.json  parameters2.json  parameters_old.json  pyproject.toml  requirements.txt  training.py  utils.py
.deprecated/: loss_func.py  main_old.py
Documentation/: parameters_description.md  shortest_path_algorithm.md
data/: adj_Poland.csv  adj_poland.csv  adj_poland2.csv  coord_Poland.csv  coord_poland.csv  demand_air_Poland.csv  demand_bus_Poland.csv  demand_car_Poland.csv  demand_rail_intercity_Poland.csv  demand_rail_regional_Poland.csv  dist_Poland.csv  dist_direct_Poland.csv  dist_poland.csv  flow_poland.csv  jrt_bus_Poland.csv  jrt_car_actual_Poland.csv  jrt_car_freeflow_Poland.csv  jrt_rail_intercity_Poland.csv  jrt_rail_regional_Poland.csv  pjt_bus_Poland.csv  pjt_rail_intercity_Poland.csv  pjt_rail_regional_Poland.csv
docs/: method_overview.md  parameters_description.md
